--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>MYSITE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.min.css" />
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>MYSITE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./dist/css/main.min.css"
+    />
+  </head>
+  <body>
 
-</head>
-<body>
+    <!-- HEADER -->
+    <header class="header">
+      <div class="menu-btn">
+        <div class="btn-lie"></div>
+        <div class="btn-lie"></div>
+        <div class="btn-lie"></div>
+      </div>
+      <nav class="menu">
+        <div class="menu-brending">
+          <div class="portrait"></div>
+      </div>
+        <ul class="menu-nav">
+          <li class="nav-item"><a href="/" class="nav-lin k">Home</a></li>
+          <li class="nav-item"><a href="./src/pages/about.html" class="nav-link">About Me</a></li>
+          <li class="nav-item"><a href="./src/pages/work.html" class="nav-link">My Work</a></li>
+          <li class="nav-item"><a href="./src/pages/contact.html" class="nav-link">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <!-- MAIN-->
+     <main id="home">
+       <h1 class="lg-heading">
+         Piotr <span class="text-secondary">Słobiński</span> 
+       </h1>
+       <h2 class="sm-heading">
+         Junior front end developer
+       </h2>
+       <div class="icons">
+         <a href="#!">
+            <i class="fab fa-twitter fa-2x"></i>
+         </a>
+         <a href="#!">
+            <i class="fab fa-facebook fa-2x"></i>
+         </a>
+         <a href="#!">
+            <i class="fab fa-linkedin fa-2x"></i>
+         </a>
+         <a href="#!">
+            <i class="fab fa-github fa-2x"></i>
+         </a>
+       </div>
+     </main>
 
 
 
-  <script src="./dist/scripts/main.js"></script>
-</body>
+    <!-- SCRIPTS -->
+    <script src="./dist/scripts/main.js"></script>
+  </body>
 </html>
