--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="./dist/css/main.min.css"
     />
   </head>
-  <body>
+  <body id="bg-img">
 
     <!-- HEADER -->
     <header class="header">
