--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- HEADER -->
     <header class="header">
-      <span class="menu-descript">MENU</span>
+      <!-- <span class="menu-word">MENU</span> -->
       <div class="menu-btn">
         <div class="btn-line"></div>
         <div class="btn-line"></div>
@@ -28,7 +28,7 @@
           <div class="portrait"></div>
       </div>
         <ul class="menu-nav">
-          <li class="nav-item"><a href="/" class="nav-lin k">Home</a></li>
+          <li class="nav-item current"><a href="/" class="nav-link ">Home</a></li>
           <li class="nav-item"><a href="./src/pages/about.html" class="nav-link">About Me</a></li>
           <li class="nav-item"><a href="./src/pages/work.html" class="nav-link">My Work</a></li>
           <li class="nav-item"><a href="./src/pages/contact.html" class="nav-link">Contact Me</a></li>
