added set-text-color function

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- MAIN-->
      <main id="home">
        <h1 class="lg-heading">
-         Piotr <span class="text-secondary">Słobiński</span> 
+         Piotr <span class="text-secondary">Słobiński</span>
        </h1>
        <h2 class="sm-heading">
-         Junior front end developer
+         Your front end developer
        </h2>
        <div class="icons">
          <a href="#!">
