--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
         <ul class="menu-nav">
           <li class="nav-item current"><a href="/" class="nav-link ">Home</a></li>
-          <li class="nav-item"><a href="./src/pages/about.html" class="nav-link">About Me</a></li>
-          <li class="nav-item"><a href="./src/pages/work.html" class="nav-link">My Work</a></li>
-          <li class="nav-item"><a href="./src/pages/contact.html" class="nav-link">Contact Me</a></li>
+          <li class="nav-item"><a href="./dist/pages/about.html" class="nav-link">About Me</a></li>
+          <li class="nav-item"><a href="./dist/pages/work.html" class="nav-link">My Work</a></li>
+          <li class="nav-item"><a href="./dist/pages/contact.html" class="nav-link">Contact Me</a></li>
         </ul>
       </nav>
     </header>
