--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>MYSITE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link
       rel="stylesheet"
@@ -38,24 +39,24 @@
     
     <!-- MAIN-->
      <main id="home">
-       <h1 class="lg-heading">
+       <h1 class="lg-heading" data-aos="fade-down" data-aos-duration="1000">
          Piotr <span class="text-secondary">Słobiński</span>
        </h1>
-       <h2 class="sm-heading">
+       <h2 class="sm-heading" data-aos="fade-right" data-aos-duration="2000">
          Your front end developer
        </h2>
        <div class="icons">
          <a href="#!">
-            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fab fa-twitter fa-2x" data-aos="fade-in" data-aos-duration="1000"></i>
          </a>
          <a href="#!">
-            <i class="fab fa-facebook fa-2x"></i>
+            <i class="fab fa-facebook fa-2x" data-aos="fade-in" data-aos-duration="2000"></i>
          </a>
          <a href="#!">
-            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="fab fa-linkedin fa-2x" data-aos="fade-in" data-aos-duration="3000"></i>
          </a>
          <a href="#!">
-            <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-github fa-2x" data-aos="fade-in" data-aos-duration="3000"></i>
          </a>
        </div>
      </main>
@@ -63,6 +64,10 @@
 
 
     <!-- SCRIPTS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="./dist/scripts/main.js"></script>
   </body>
 </html>
