added british icon and span 'MENU' to navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
     <!-- HEADER -->
     <header class="header">
-      <!-- <span class="menu-word">MENU</span> -->
+      <div class="lang-switch">
+          <a href="https://icons8.com"></a>
+          <img id="gb" src="https://img.icons8.com/ios/50/7f8c8d/great-britain-filled.png">
+      </div>
+
+      <span class="menu-word">MENU</span>
       <div class="menu-btn">
         <div class="btn-line"></div>
         <div class="btn-line"></div>
@@ -45,18 +50,18 @@
        <h2 class="sm-heading" data-aos="fade-right" data-aos-duration="2000">
          Your front end developer
        </h2>
-       <div class="icons">
+       <div class="icons" data-aos="fade-left" data-aos-duration="2000">
          <a href="#!">
-            <i class="fab fa-twitter fa-2x" data-aos="fade-in" data-aos-duration="1000"></i>
+            <i class="fab fa-twitter fa-2x" ></i>
          </a>
          <a href="#!">
-            <i class="fab fa-facebook fa-2x" data-aos="fade-in" data-aos-duration="2000"></i>
+            <i class="fab fa-facebook fa-2x" ></i>
          </a>
          <a href="#!">
-            <i class="fab fa-linkedin fa-2x" data-aos="fade-in" data-aos-duration="3000"></i>
+            <i class="fab fa-linkedin fa-2x" ></i>
          </a>
          <a href="#!">
-            <i class="fab fa-github fa-2x" data-aos="fade-in" data-aos-duration="3000"></i>
+            <i class="fab fa-github fa-2x" ></i>
          </a>
        </div>
      </main>
