added audio streen to Home page and broke message card styling

--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
          Your front end developer
        </h2>
        <div class="icons" data-aos="fade-left" data-aos-duration="2000">
-         <a href="#!">
-            <i class="fab fa-twitter fa-2x" ></i>
-         </a>
-         <a href="#!">
-            <i class="fab fa-facebook fa-2x" ></i>
-         </a>
+        
          <a href="#!">
             <i class="fab fa-linkedin fa-2x" ></i>
          </a>
@@ -64,9 +59,19 @@
             <i class="fab fa-github fa-2x" ></i>
          </a>
        </div>
+      
+       <div class="socials">
+          <a href="#!">
+              <i class="fab fa-twitter" ></i>
+           </a>
+           <a href="https://www.facebook.com/piotrdrugi.augustyn.7" target="_blank">
+              <i class="fab fa-facebook" ></i>
+           </a>
+       </div>
      </main>
 
-
+     <!-- MUSIC FROM FreeCodeCamp radio :)  -->
+     <iframe width="0" height="0" src="https://www.youtube.com/embed/vAKtNV8KcWg?rel=0&autoplay=1" frameborder="0" type="audio/fileextension" allow="autoplay"></iframe>
 
     <!-- SCRIPTS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
