--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="portrait"></div>
       </div>
         <ul class="menu-nav">
-          <li class="nav-item current"><a href="/" class="nav-link ">Home</a></li>
+          <li class="nav-item current"><a href="index.html" class="nav-link ">Home</a></li>
           <li class="nav-item"><a href="./dist/pages/about.html" class="nav-link">About Me</a></li>
           <li class="nav-item"><a href="./dist/pages/work.html" class="nav-link">My Work</a></li>
           <li class="nav-item"><a href="./dist/pages/contact.html" class="nav-link">Contact Me</a></li>
